--- a/assets/style.css
+++ b/assets/style.css
@@ -47,3 +47,18 @@ font-size: larger;
 #pokemon-container-lat{
 background-color: darkcyan;
 }
+
+/* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+       #map {
+        height: 10%;
+      }
+      
+      /* Optional: Makes the sample page fill the window. */
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+     
+      }
