--- a/assets/style.css
+++ b/assets/style.css
@@ -19,3 +19,20 @@ ul {
   overflow-x: hidden;
   overflow-y: auto;
 }
+
+main {
+  display: grid;
+  justify-content: space-around;
+}
+
+#map {
+  height: 600px;
+  width: 600px;
+  background-color: blue;
+}
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
